--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
 
 @media screen and (max-width: 960px) {
   .hero {
-    height: auto;
+    height: 125vh;
   }
 }
 
@@ -220,7 +220,7 @@
   .video iframe {
     padding: 24px;
     width: 90%;
-    height: 55%;
+    height: 100%;
   }
 }
 
